Time: 6 ms (35.12%), Space: 44.7 MB (95.77%) - LeetHub